namespace go serialization

struct StructThrift {
    1: string field1,
    2: i64 field2,
    3: list<string> field3,
    4: i64 field4,
    5: string field5,
    6: string field6,
    7: binary field7,
}
